--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -29,3 +29,11 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+
+#button{
+  padding-right: 30px;
+}
+
+#button1{
+  padding-left: 30px;
+}
